# eumos

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  debug_regex.py  license_header.txt  pr_comments.md  pyproject.toml
.github/workflows/: pytest.yml
arch/rv64/: gprs.yml
arch/rv64/csrs/: mcounteren.yml  mideleg.yml
arch/rv64/formats/: B.yml  J.yml  S.yml  U.yml
arch/rv64/gprs/: x15.yml  x16.yml  x19.yml  x2.yml  x25.yml  x27.yml  x3.yml  x30.yml  x31.yml  x5.yml  x8.yml  x9.yml
blackrock/: __init__.py  blackrock.py  csr_loader.py  format_loader.py  gpr_loader.py  instruction_loader.py  models.py
blackrock/arch/schemas/: format_schema.yaml  gpr_file_schema.yaml
docs/: README.md  csrs.md  data-and-packaging.md  decoder-and-encoding.md  getting-started.md  instructions.md  overview.md  registers-and-context.md
eumos/: __init__.py  constants.py  csr_loader.py  decoder.py  encoder.py  eumos.py  exception_loader.py  format_loader.py  fpr_loader.py  gpr_loader.py  instance.py  instruction_loader.py  models.py  validation.py
eumos/arch/rv64/: exceptions.yml
eumos/arch/schemas/: csr_schema.yaml  exception_schema.yaml  format_schema.yaml  fpr_file_schema.yaml  gpr_file_schema.yaml  gpr_schema.yaml  instruction_schema.yaml
example/: asm_encoding_example.py  blackrock_example.py  eumos_example.py  instruction_loader_example.py
python/: csr_loader.py  decoder.py  format_loader.py  format_schema.yaml  gpr_loader.py  instance.py  instruction_loader.py  instruction_schema.yaml  models.py  validation.py
slate/: instruction_loader.py  models.py
tests/: test_asm_auto_detect.py  test_asm_roundtrip.py  test_blackrock.py  test_csr_loader.py  test_decoder.py  test_decoder_api.py  test_encoder.py  test_eumos.py  test_format_loader.py  test_fpr_loader.py  test_gpr_loader.py  test_instance.py  test_instruction_groups.py  test_instruction_loader.py  test_isa.py  test_register_validation.py  test_validation.py
yaml/rv64/csrs/: mcause.yml  mcounteren.yml  medeleg.yml  mepc.yml  mideleg.yml  mie.yml  mip.yml  misa.yml  mscratch.yml  mstatus.yml  mtval.yml  mtvec.yml
yaml/schemas/: csr_schema.yaml  format_schema.yaml
(+340 files in other folders)
