[project]
name = "eumos"
version = "0.1.0"
description = "Python RISCV manual"
readme = "README.md"
license = "MIT"
dependencies = [
    "pre-commit",
    "pykwalify",
    "PyYAML",
]
authors = [
    { name = "Stuart Alldred", email = "stuartalldred@gmail.com" }
]
requires-python = ">= 3.13"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["eumos"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.setuptools]
include-package-data = true
packages = ["eumos"]

[tool.setuptools.package-data]
eumos = ["arch/**/*"]
